# winding_number

./: CMakeLists.txt  Project_Writeup.md  README.md
include/: Visualizer.h  common.cuh  gpu_winding_number.cuh  logging.h  poly_creator.hpp  poly_io.hpp  polycreator.hpp  visualizer.h
src/: better_winding.cpp  common.cu  gpu_winding_number.cu  logging.cu  main.cpp  poly_creator.cpp  poly_io.cpp  polycreator.cpp  visualizer.cpp
test/: polygons.txt
